# todo-fastapi

./: README.md
fastapi-todo/: pyproject.toml
fastapi-todo/fastapi_todo/: crud.py  database.py  main.py  models.py  schemas.py
fastapi-todo/tests/: test_fastapi_todo.py
fastapi-todo/tests/__pycache__/: test_main.py
sqlmodel-crud/: pyproject.toml
sqlmodel-crud/sqlmodel_crud/: main.py  test_main.py
sqlmodel-crud/tests/: test_sqlmodel_crud.py
