[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["hafsatufail2004 <tufailhafsa12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.28"
pydantic = "^2.6.4"
pytest = "^8.1.1"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.0"
unittest = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
